--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="imgs/initials.jpg">
@@ -11,7 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <title>Contact</title>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-268667196-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        
+        gtag('config', 'UA-268667196-1');
+    </script>
 </head>
 
 <body>
@@ -41,20 +50,17 @@
                 <p class="paragraphs">
                     <h2>Alex Choi</h2>
                     <br><br>
-                    Email: <a href="mailto:alexchoig@umich.edu" target="_blank" aria-label="Mail"><i class="fa-envelope"></i></a>
+                    Email: <a href="mailto:alexchoig@umich.edu" target="_blank" aria-label="Mail"><i class="envelope-logo"></i></a>
                     <br><br>
-                    Linkedin: <a href="https://www.linkedin.com/in/alex-choi-5774a8200/" aria-label="Linkedin" target="_blank"><i class="fa-linkedin"></i></a>
+                    Linkedin: <a href="https://www.linkedin.com/in/alex-choi-5774a8200/" aria-label="Linkedin" target="_blank"><i class="linkedin-logo"></i></a>
                     <br><br>
-                    Github: <a href="https://github.com/alexchoi852" aria-label="Github" target="_blank"><i class="fa-github"></i></a>
+                    Github: <a href="https://github.com/alexchoi852" aria-label="Github" target="_blank"><i class="github-logo"></i></a>
                 </p>
             </div>
             <div>
                 <img src="imgs/bitmojiportrait.png" alt="Bitmoji Portrait" class="pic">
             </div>
         </div>
-    </main>
-
-
 
     </main>
 
