--- a/books.html
+++ b/books.html
@@ -12,20 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Varela&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-268667196-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        
-        gtag('config', 'UA-268667196-1');
-    </script>
 </head>
 
 <body>
     <a href=#main class="jump">Jump to Content</a>
-    <div class="wrapper" id="book-wrap"></div>
+    <div class="wrapper" id="contact-wrap"></div>
         <header>
             <nav>
                 <ul class="topnav">
