--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="imgs/initials.jpg">
-    <link href="https://fonts.googleapis.com/css?family=Dekko&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Varela&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-268667196-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDH0JV95Y8"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         
-        gtag('config', 'UA-268667196-1');
+        gtag('config', 'G-TDH0JV95Y8');
     </script>
 </head>
 
@@ -31,6 +31,7 @@
                 <ul class="topnav">
                     <li><a class="active" href="index.html"> About Me </a></li>
                     <li><a href="projects.html"> Projects </a></li>
+                    <li><a href="sports.html"> Sports </a></li>
                     <li><a href="books.html"> Favorite Books </a></li>
                     <li><a href="contact.html"> Contact </a></li>
                 </ul>
@@ -39,7 +40,7 @@
     </div>
 
     <main id="main">
-        <h1>Hi! I'm Alex Choi</h1>
+        <h1 id="index">Hi! I'm Alex Choi</h1>
         <div class="flex-container">
             <p class="paragraphs">
                 I am currently a second year undergraduate student at the University of Michigan who is passionate about the intersection between 
@@ -53,9 +54,26 @@
                 pharmaceutical field and become versatile to a wide range of fields, such as my other interests in product analytics as more users depend on the growth of data.    
 
                 <br><br>
-                Outside of academics, I enjoy playing tennis and cello, watching basketball, reading books, and fishing.
+                Outside of academics, I enjoy playing tennis and cello, following basketball and soccer news, reading books, and fishing. I am originally from the Ann Arbor area.  
             </p>
-            <img src="imgs/In Front of the Sea.PNG" alt="Standing on Sand" id="standing">
+            <div class="about_me">
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front" tabindex="0">
+                        <img src="imgs/In Front of the Sea.PNG" alt="Standing on Sand" id="standing">
+                    </div>
+                    <div class="flip-card-back">
+                      <h1>Skills</h1> 
+                      <p>
+                        <br>
+                        Programming: Python, C++, R, SQL, HTML/CSS, MATLAB<br><br>
+                        Languages: English, Korean, Chinese <br><br>
+                        Tools: Microsoft Office, Tableau, Adobe Illustrator<br><br>
+                        Other skills: Probability Theory, Applied Regression Analysis
+                      </p>
+                    </div>
+                  </div>
+                </div>
         </div>
 
 
