--- a/books.html
+++ b/books.html
@@ -8,20 +8,30 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="imgs/book.jpg">
-    <link href="https://fonts.googleapis.com/css?family=Dekko&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Varela&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDH0JV95Y8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-TDH0JV95Y8');
+    </script>
+
 </head>
 
 <body>
     <a href=#main class="jump">Jump to Content</a>
-    <div class="wrapper" id="contact-wrap"></div>
+    <div class="wrapper" id="books-wrap"></div>
         <header>
             <nav>
                 <ul class="topnav">
                     <li><a href="index.html"> About Me </a></li>
                     <li><a href="projects.html"> Projects </a></li>
+                    <li><a href="sports.html"> Sports </a></li>
                     <li><a href="books.html" class="active"> Favorite Books </a></li>
                     <li><a href="contact.html"> Contact </a></li>
                 </ul>
